# lol_app

./: README.md
django/: champid.json  db.sqlite3  manage.py  pyproject.toml
django/lol_app/: asgi.py  settings.py  urls.py  wsgi.py
django/lol_main_app/: api.py  apps.py  data_riot.py  models.py  serializers.py  urls.py  views.py
django/lol_main_app/migrations/: 0001_initial.py
django/lol_main_app/templates/: index.html
lol_app/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
lol_app/src/: App.css  App.jsx  main.jsx
lol_app/src/Components/: Card-main.jsx  Card.jsx  Carousel.jsx  Contact.jsx  Header.jsx  Home.jsx  Li.jsx  MainContent.jsx  NavBar.jsx  Search.jsx  SideBar.jsx  Table_players.jsx
lol_app/src/Components/Context/: context.jsx
lol_app/src/Components/Pages/: Home.jsx  Login.jsx  Register.jsx
lol_app/src/Mocks/: data.json
lol_app/src/Styles/: header.css  input.css  log_in.css  mainContent.css
