[tool.poetry]
name = "league-app"
version = "1.1.4"
description = "version django de la app del lol"
authors = ["Franco Benitez y Emiliano Celilli"]
readme = "README.md"
packages = [{include = "league_app"}]

[tool.poetry.dependencies]
python = "^3.11.2"
django = "^4.2.4"
riotwatcher = "^3.2.5"
djangorestframework = "^3.14.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
